fix menu alignments

--- a/assets/scss/bootstrap/_navbar.scss
+++ b/assets/scss/bootstrap/_navbar.scss
@@ -18,7 +18,7 @@
   position: relative;
   display: flex;
   flex-wrap: wrap; // allow us to do the line break for collapsing content
-  align-items: start;
+  align-items: center;
   justify-content: space-between; // space out brand from logo
   padding-top: $navbar-padding-y;
   padding-right: $navbar-padding-x; // default: null
